fixing overflow issues

--- a/static/css/postView.css
+++ b/static/css/postView.css
@@ -1,11 +1,11 @@
-::-webkit-scrollbar {
-    display: none; /* Hides the scrollbar */
-  }
+ ::-webkit-scrollbar {
+    display: none;
+}
   
   * {
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none; /* IE 10+ */
-  }
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  } 
 .postView {
     top: 0;
     left: 0;
@@ -34,7 +34,6 @@
     margin: auto;
     border-radius: 24px;
 }
-/* For modern browsers */
 
 .postView .post>img {
     width: 100%;
@@ -63,34 +62,6 @@
     flex-grow: 0;
 
 }
-
-.postView .text {
-    display: flex;
-    overflow: visible;
-    text-overflow: ellipsis;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: lighter;
-    font-size: 14px;
-    line-height: 18px;
-    color: #ffffffe4;
-}
-
-
-.text {
-    font-size: 40px;
-}
-
-.postView .commentsWrap {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    height: calc(100% - 40px);
-    padding: 0 40px;
-    width: 50%;
-}
-
 .commentsWrap .inputwrap {
     width: 100%;
 }
@@ -120,18 +91,37 @@
     border-radius: 12px;
     padding: 12px;
 }
-
-.commentsWrap .commentslist {
-    padding: 6px;
-    height: 400px; 
-    overflow-y: scroll; 
-    overflow-x: hidden;
+.postView .text {
+    display: flex;
+    overflow: visible;
+    text-overflow: ellipsis;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: lighter;
+    font-size: 14px;
+    line-height: 18px;
+    color: #ffffffe4;
 }
 
-.commentslist .comment {
-    background-color: #FD5F49;
+
+.text {
+    font-size: 40px;
 }
 
+.commentsWrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+    padding: 24px;
+    gap: 24px;
+    
+}
+.commentsList {
+    flex-grow: 1;
+    overflow: auto; 
+}
 .commentCreator {
     font-family: 'Inter';
     font-style: normal;
@@ -192,7 +182,6 @@
     border-bottom: 1px solid rgba(255, 255, 255, 0.16);
     padding: 16px 0px;
     min-width: 300px;
-    height: 100%;
 }
 
 .comment {
